# pubtator-link

./: .dockerignore  .env.docker.example  .env.example  .flake8  .gitignore  .loc-allowlist  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Makefile  README.md  claude_desktop_config_example.json  comments.txt  container-release.json  mcp_server.py  pyproject.toml  server.py  test.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  conformance.yml  container-ci.yml  container-release.yml  container-security.yml  docker.yml  release.yml  security.yml
.planning/analysis/: 2026-04-29-modern-mcp-docker-npm-verification.md  2026-04-29-modern-python-agentic-development-verification.md
.planning/reviews/: 2026-05-25-senior-engineer-audit.md
benchmarks/: README.md
benchmarks/configs/: focused_case_selection.yaml  focused_default.yaml  focused_full_text_smoke.yaml
benchmarks/prompts/: answer_bioasq_ideal_v1.md  answer_pubmedqa_article_local_v1.md  focused_benchmark_judge_v1.md  focused_experience_self_assessment_v1.md  grounding_judge_v1.md  provider_bioasq_mcp_review_rag_v1.md  provider_bioasq_single_v1.md  provider_pubmedqa_mcp_article_local_v1.md  provider_pubmedqa_single_v1.md  provider_pubmedqa_single_v2.md  provider_pubmedqa_single_v3.md  provider_pubmedqa_single_v4.md  provider_pubmedqa_single_v5.md  self_judge_mcp_consumer_v1.md
benchmarks/pubtator_mcp_claude/: README.md  clinical_prompt.md  judge_prompt.md  mcp_evaluation_prompt.md  run_benchmark.sh
benchmarks/reports/: 2026-05-09-provider-full-suite-benchmark-report.md  2026-05-09-pubmedqa-50-single-case-smoke.md  focused-51-delta-corrected-interpretation.md  focused-51-delta-corrected-report.md  focused-51-delta-experience.md  focused-51-delta-report.md  focused-default-improvement-plan.md  focused-default-judge.md  focused-default-report.md  focused-default-self-assessment.md  focused-smoke-balanced10-experience.md  focused-smoke-balanced10-report.md
benchmarks/suites/: bioasq_complex_12.yaml  bioasq_ideal_smoke.yaml  bioasq_summary_full.yaml  pubmedqa_balanced_30.yaml  pubmedqa_balanced_51.yaml  pubmedqa_full.yaml  pubmedqa_full_text_smoke.yaml  pubmedqa_smoke.yaml
docker/: .env.npm.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.npm.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn_conf.py
docs/: 2026-04-30-maintainability-ci-cd-llm-development-review.md  2026-05-01-pubtator-link-mcp-capability-speed-usability-scientific-review.md  2026-05-02-pubtator-link-consolidated-roadmap.md  2026-05-02-pubtator-link-mcp-llm-consumer-evaluation.md  2026-05-02-pubtator-link-mcp-parallel-concurrency-analysis.md  2026-05-02-pubtator-link-observability-implementation-guide.md  2026-05-03-mcp-llm-lean-speed-accuracy-report.md  MCP_CONNECTION_GUIDE.md  REVIEW_RERAG_POC.md  SECURITY.md  architecture.md  configuration.md  deployment.md  mcp-tool-catalog.md  rest-api.md
docs/development/: branch-protection.json  branch-protection.md  llm-agentic-development-followups.md  operations-runbook.md
docs/examples/: claude_desktop_config_example.json
docs/superpowers/: README.md
docs/upgrade-notes/: 2026-05-26-factory-app.md
pubtator_link/: __init__.py  auth.py  authorization.py  cli.py  config.py  logging_config.py  mcp_server.py  security.py  server_manager.py
pubtator_link/api/: __init__.py  client.py  retry.py  search_filters.py  text_annotation_polling.py
pubtator_link/benchmarks/: __init__.py  __main__.py  adapters.py  artifacts.py  cases.py  cli.py  compare.py  log_parser.py  models.py  prompts.py  runner.py  scoring.py  storage.py  summaries.py
pubtator_link/db/: __init__.py  migrate.py  review_schema.sql
pubtator_link/mcp/: __init__.py  annotations.py  argument_aliases.py  audit_export.py  catalog.py  catalog_docs.py  compat.py  contracts.py  errors.py  facade.py  input_normalization.py  meta_budget.py  metadata.py  notfound_guard.py  output_validation.py  pmc_annotations.py  pmc_export.py  profiles.py  prompts.py  quickstart.py  relations.py  resources.py  review_resources.py  schema_compaction.py  search_fallback.py  service_adapters.py  session_orientation.py  text_annotation_degraded.py  tools.py  untrusted_content.py  validation_errors.py
pubtator_link/models/: __init__.py  corpus_suggestion.py  discovery.py  entities.py  literature_graph.py  literature_graph_hints.py  publication_metadata.py  publication_passages.py  publications.py  requests.py  research_session_list.py  responses.py  review_rerag.py  variants.py  workflow_help.py
pubtator_link/observability/: __init__.py  metrics.py
pubtator_link/repositories/: __init__.py  review_rerag.py  review_rerag_mappers.py  review_research_session_repository.py  review_research_sessions.py
pubtator_link/services/: __init__.py  citation_graph.py  clinvar.py  corpus_suggestion.py  degradation.py  diagnostics.py  discovery_metadata.py  entity_matching.py  errors.py  europe_pmc.py  full_text_preparation.py  literature_graph_compact.py  literature_identifier_resolution.py  literature_paper_resolution.py  literature_providers.py  llm_review_context.py  mcp_diagnostics.py  ncbi_discovery.py  ncbi_id_conversion.py  ncbi_mesh.py  provenance.py  publication_metadata.py  publication_passage_service.py  publication_service.py  related_evidence.py  research_session.py  review_audit.py  review_context_service.py  review_evidence_certainty.py  review_index_lifecycle.py  review_indexing.py  review_preparation_queue.py  review_state.py  search_coverage.py  search_shaping.py  source_preflight.py  topic_literature_map.py  upstream_http.py  url_safety.py  variant_evidence.py  (+1 more)
scripts/: analyze_focused_benchmark.py  build_focused_benchmark_cases.py  build_large_benchmark_cases.py  check_file_size.py  generate_mcp_tool_catalog.py  run_focused_benchmark_diagnostics.py  run_single_case_provider_benchmark.py  smoke_mcp_llm_surface.py  smoke_mcp_tool_surface.py
tests/: __init__.py  conftest.py  test_client.py  test_endpoints.py  test_services.py
tests/fixtures/: api_responses.py  (+2 more)
(+336 files in other folders)
