[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pubtator-link"
version = "1.0.0"
description = "A unified server for the PubTator3 biomedical literature API with MCP integration"
readme = "README.md"
authors = [
    { name = "AI Assistant" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.48.0,<1.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "async-lru>=2.0.4,<3.0.0",
    "structlog>=24.4.0,<26.0.0",
    "orjson>=3.10.0,<4.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=5.2.0,<7.0.0",
    "rich>=15.0.0,<16.0.0",
    "typer>=0.25.1,<1.0.0",
    "mcp[cli]>=1.27.1,<2.0.0",
    "fastmcp>=3.2.0,<4.0.0",
    "gunicorn>=26.0.0,<27.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "defusedxml>=0.7.1",
    "asgi-correlation-id>=4.3.0,<5.0.0",
    "prometheus-client>=0.21.0,<1.0.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=5.5.1,<6.0.0",
    "torch>=2.5.0",
    "numpy>=2.0.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-xdist>=3.6.0,<4.0.0",
    "httpx>=0.28.0,<1.0.0",
    "respx>=0.22.0,<1.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=2.1.0,<3.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "types-defusedxml>=0.7.0.20260504",
]

[project.urls]
Homepage = "https://github.com/ai-assistant/pubtator-link"
Repository = "https://github.com/ai-assistant/pubtator-link"
Issues = "https://github.com/ai-assistant/pubtator-link/issues"

[project.scripts]
pubtator-link = "pubtator_link.cli:main"
pubtator-link-mcp = "mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["pubtator_link"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "S",
    "T20",
    "SIM",
    "RUF",
]
ignore = [
    "S101",
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "T20"]
"tests/fixtures/test_data.py" = ["RUF012"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = [
    ".*site-packages.*",
    ".*/miniforge3/.*",
    ".*/venv/.*",
    ".*/.venv/.*",
    "htmlcov/.*",
]

[[tool.mypy.overrides]]
module = [
    "async_lru.*",
    "asyncpg.*",
    "structlog.*",
    "mcp.*",
    "fastmcp.*",
    "fastapi.*",
    "pydantic.*",
    "pydantic_settings.*",
    "httpx.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["pubtator_link"]
omit = [
    "tests/*",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 80
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
